alterção no title e no paragrafo.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Montserrat:wght@400;500;600;700;900&display=swap"
         rel="stylesheet">
-    <title>desafio we care</title>
+    <title>projeto-1 we care</title>
 </head>
 
 <body>
@@ -31,8 +31,7 @@
             <h2>About Your Pet</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti blanditiis fugiat consequuntur nulla
                 nemo
-                error aliquid, delectus vitae, ipsum totam architecto exercitationem doloribus unde sequi atque quos
-                cupiditate recusandae. Suscipit.</p>
+                error aliquid, delectus vitae.</p>
 
             <button class="button-explore"> EXPLORE</button>
         </section>
