--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <h1>We Care</h1>
             <h2>About Your Pet</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti blanditiis fugiat consequuntur nulla
-                nemo
-                error aliquid, delectus vitae.</p>
+                nemo.  </p>
 
             <button class="button-explore"> EXPLORE</button>
         </section>
