alteração no buttun explore

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti blanditiis fugiat consequuntur nulla
                 nemo.  </p>
 
-            <button class="button-explore"> EXPLORE</button>
+            <button class="button-explore"> EXPLORE.</button>
         </section>
     </main>
 
